Updates the tooltip content and alignment. Fixes some header casing.

--- a/_scss/component/tooltip.scss
+++ b/_scss/component/tooltip.scss
@@ -6,7 +6,7 @@
 
 .usajobs-tooltip {
   position: absolute;
-  text-align: center;
+  text-align: left;
   color: $color-white;
   background: rgba(50, 58, 69, 0.9);
   z-index: $layer-tooltip;
